# Onceuponatimeinhollywood

./: ._.git  .gitattributes  .gitignore  README.md  pyproject.toml
data/: .gitattributes  add_streaming.py  advanced_feature_time_series.csv  advanced_features.py  advanced_features_visualize.py  aggregate_monthly.py  aggregate_monthly_no_jan_1.py  dataset_final.csv  explore_aggregate_data.py  explore_data.ipynb  explore_raw.py  movies_no_jan_1.csv  movies_with_release_type.csv  new_tmdb_movies_master.jsonl  quality_check.py  rawData.py  tmdb_movies_10000.json  tmdb_movies_master.jsonl  train_model_dataset_arda.csv
economic_analysis/: analysis.py
genre/: README.md
genre/plots/: efficiency_fragility_matrix.py  genre_correlation_matrix.py  genre_drift_plot.py  genre_financial_health_trend.py  genre_franchise_saturation_trend.py  genre_integrated_financial_franchise.py  genre_market_health_trend.py  genre_slopegraph.py  genre_volume_trend.py
genre/scripts/: Project_Analysis.ipynb  calculate_epps_singleton.py  generate_genre_metrics.py  genre_elasticity.py  genre_gini.py  overall_industry_metrics.py
model/: Data_Literacy_Final_Model.ipynb
release_analysis/: .gitignore  README.md
release_analysis/analysis_codes/: analysis.py  dkw.py  genre_plot.py  paper_monthly_plots.py
release_analysis/previous_unusued_codes/: README.txt
release_analysis/previous_unusued_codes/budget/: budget_analysis.py
release_analysis/previous_unusued_codes/genre/: genre_analysis.py
release_analysis/previous_unusued_codes/runtime/: generate_dkw_tueplots.py  (+4 more)
utils/: plotting_style.py
(+11 files in other folders)
