[project]
name = "data-literacy-project"
version = "0.1.0"
description = "Data Literacy Project Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "scipy>=1.7.0",
    "ipykernel>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "black",
    "flake8",
]
